[project]
name = "langgraph-crash-course"
version = "0.1.0"
description = "Building a simple agent by following the crash course of NeuralNine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
